implement mouse pointer collaboration feature

--- a/packages/client/css/glsp-sprotty.css
+++ b/packages/client/css/glsp-sprotty.css
@@ -254,3 +254,7 @@
     fill: transparent;
     width: var(--theia-scrollbar-rail-width);
 }
+
+.mouse-pointer-text {
+    text-anchor: start !important;
+}
